<resources>
    <string name="app_name">ARNA home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="make_your">MAKE YOUR</string>
    <string name="home_beautiful">HOME BEAUTIFUL</string>
    <string name="get_started">Get Started</string>
    <string name="onboard">The best simple place where you discover most wonderful furnitures and make your home beautiful</string>
    <string name="popular">Popular</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="_4_5">4.5</string>
    <string name="_12_00">$ 12.00</string>
    <string name="black_simple_lamp">Black Simple Lamp</string>
    <string name="bedroom">Bedroom</string>
    <string name="bedroom_category">Bedroom</string>
    <string name="living_room">Living Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="bath">Bath</string>
    <string name="etno">Etno</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile_">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">WELCOME</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account? </string>
    <string name="minimal_stand">Minimal Stand</string>
    <string name="_50">$ 50</string>
    <string name="minimal_stand_is_made_of_by_natural_wood_the_design_that_is_very_simple_and_minimal_this_is_truly_one_of_the_best_furnitures_in_any_family_for_now_with_3_different_colors_you_can_easily_select_the_best_match_for_your_home">Minimal Stand is made of by natural wood. The design that is very simple and minimal. This is truly one of the best furnitures in any family for now. With 3 different colors, you can easily select the best match for your home.</string>
    <string name="_50_reviews">(50 reviews)</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="minus">-</string>
    <string name="_01">01</string>
    <string name="plus">+</string>
    <string name="my_cart">My Cart</string>
    <string name="check_out">Check out</string>
    <string name="total">Total:</string>
    <string name="_95_00">$ 95.00</string>
    <string name="add_all_to_my_cart">Add all to my cart</string>
    <string name="favorite">Favorite</string>
    <string name="notifications">Notifications</string>
    <string name="your_order_123456789_has_been_shipped_successfully">Your order #123456789 has been shipped successfully</string>
    <string name="desc">Please help us to confirm and rate your order to get 10% discount code for next order.</string>
    <string name="jennie_kim">Jennie Kim</string>
    <string name="personal_information">Personal Information</string>
    <string name="jenniekim_gmail_com">jenniekim@gmail.com</string>
    <string name="address">Address</string>
    <string name="bishkek_tunguch_2">Bishkek, Tunguch 2</string>
    <string name="zzzz">************</string>
    <string name="card">Card</string>
    <string name="_3947">**** **** **** 3947</string>
    <string name="check_out_">Check-out</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="name_and_last_name">Name and last name</string>
    <string name="payment">Payment</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="fast_2_3days">Fast (2-3days)</string>
    <string name="order">Order:</string>
    <string name="delivery">Delivery</string>
    <string name="_15_00">$ 15.00</string>
    <string name="_100_00">$ 100.00</string>
    <string name="submit_order">Submit order</string>
    <string name="choose_delivery_company">Choose delivery company</string>
    <string name="choose_delivery_period">Choose delivery period</string>
    <string name="medium_2_3weeks">Medium (2-3weeks)</string>
    <string name="slow_2_3months">Slow (2-3months)</string>
    <string name="_2_00">$ 2.00</string>
    <string name="_6_00">$ 6.00</string>
    <string name="_10_00">$ 10.00</string>
    <string name="submit">Submit</string>
    <string name="adding_new_card">Adding new card</string>
    <string name="choose_card">Choose card</string>
    <string name="master_card">Master Card</string>
    <string name="visa">Visa</string>
    <string name="card_number">Card number</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="aizat_madumarova">AIZAT MADUMAROVA</string>
    <string name="security_code">Security code</string>
    <string name="z">******</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="review">Review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>