<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/tv_im"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:src="@color/purple"/>

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimal_stand"
        app:layout_constraintStart_toEndOf="@id/tv_im"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/nunito_sans"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@color/greyish"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="35dp"
        android:layout_height="45dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_quantity"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/grey_light"
        android:textColor="@color/grey_dark"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/_01"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/grey_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_plus"/>

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="35dp"
        android:layout_height="45dp"
        android:text="@string/plus"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_im"
        android:backgroundTint="@color/grey_light"
        android:layout_marginStart="20dp"
        android:textColor="@color/grey_dark"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/btn_remove_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_95_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/nunito_sans"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/grey_dark"/>


</androidx.constraintlayout.widget.ConstraintLayout>